--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,44 @@
-/* Write your CSS here! */
+body {
+    background-color: rgb(20, 123, 220);
+    font-size: 30;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+    margin-left: 350px;
+    margin-right: 350px;
+}
+
+ol {
+    text-align: left;
+    margin-left: 350px;
+    margin-right: 350px;
+}
+
+ul {
+    text-align: left;
+    margin-left: 350px;
+    margin-right: 350px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #bigUp {
+      font-size: large;
+  }
